--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Food Template</title>
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -23,7 +23,7 @@
 								alt=""
 							/>
 						</div>
-						<div class="col-md-7">
+						<div class="col-md-7 col-10">
 							<button
 								class="navbar-toggler bg-light"
 								type="button "
@@ -103,27 +103,117 @@
 						<i class="fa-solid fa-folder fs-3 pe-2"></i>
 					</p>
 				</div>
-
-				<div class="col-12 col-md-10 row justify-content-end m-0 p-0">
-					<div class="col-12 col-md-5 bg-danger p-3">
-						<div
-							class="col-12 col-md-12 container border border-5 p-4"
-						>
-							<h1 class="text-center text-white fw-bolder fs-1">
-								DELICIOUS BREAKFAST
-							</h1>
-							<p class="text-white lh-lg fs-5">
-								Lorem ipsum, dolor sit amet consectetur
-								adipisicing elit. Lorem ipsum dolor sit, amet
-								consectetur adipisicing elit.
-							</p>
-							<button
-								class="text-white bg-danger btn border-2 btn-outline-light my-5"
+				<div id="carouselExample" class="carousel slide">
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<div
+								class="col-12 col-md-10 row justify-content-end m-0 p-0"
 							>
-								DISCOVER MENU
-							</button>
+								<div class="col-12 col-md-5 bg-danger p-3">
+									<div
+										class="col-12 col-md-12 container border border-5 p-4"
+									>
+										<h1
+											class="text-center text-white fw-bolder fs-1"
+										>
+											DELICIOUS BREAKFAST
+										</h1>
+										<p class="text-white lh-lg fs-5">
+											Lorem ipsum, dolor sit amet
+											consectetur adipisicing elit. Lorem
+											ipsum dolor sit, amet consectetur
+											adipisicing elit.
+										</p>
+										<button
+											class="text-white bg-danger btn border-2 btn-outline-light my-5"
+										>
+											DISCOVER MENU
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div
+								class="col-12 col-md-10 row justify-content-end m-0 p-0"
+							>
+								<div class="col-12 col-md-5 bg-danger p-3">
+									<div
+										class="col-12 col-md-12 container border border-5 p-4"
+									>
+										<h1
+											class="text-center text-white fw-bolder fs-1"
+										>
+											DELICIOUS BREAKFAST
+										</h1>
+										<p class="text-white lh-lg fs-5">
+											Lorem ipsum, dolor sit amet
+											consectetur adipisicing elit. Lorem
+											ipsum dolor sit, amet consectetur
+											adipisicing elit.
+										</p>
+										<button
+											class="text-white bg-danger btn border-2 btn-outline-light my-5"
+										>
+											DISCOVER MENU
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<div
+								class="col-12 col-md-10 row justify-content-end m-0 p-0"
+							>
+								<div class="col-12 col-md-5 bg-danger p-3">
+									<div
+										class="col-12 col-md-12 container border border-5 p-4"
+									>
+										<h1
+											class="text-center text-white fw-bolder fs-1"
+										>
+											DELICIOUS BREAKFAST
+										</h1>
+										<p class="text-white lh-lg fs-5">
+											Lorem ipsum, dolor sit amet
+											consectetur adipisicing elit. Lorem
+											ipsum dolor sit, amet consectetur
+											adipisicing elit.
+										</p>
+										<button
+											class="text-white bg-danger btn border-2 btn-outline-light my-5"
+										>
+											DISCOVER MENU
+										</button>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
+					<button
+						class="carousel-control-prev"
+						type="button"
+						data-bs-target="#carouselExample"
+						data-bs-slide="prev"
+					>
+						<span
+							class="carousel-control-prev-icon"
+							aria-hidden="true"
+						></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button
+						class="carousel-control-next"
+						type="button"
+						data-bs-target="#carouselExample"
+						data-bs-slide="next"
+					>
+						<span
+							class="carousel-control-next-icon"
+							aria-hidden="true"
+						></span>
+						<span class="visually-hidden">Next</span>
+					</button>
 				</div>
 			</div>
 			<!--background image div closed-->
@@ -498,29 +588,122 @@
 				</div>
 			</div>
 			<!--chef's head closed-->
-			<div class="col-12 col-md-12 row pt-5 justify-content-center m-0">
-				<div class="col-12 col-md-4 bg_color p-5">
-					<h4>Gustave Berneir</h4>
-					<p class="text-secondary">Executive Chef</p>
-					<p class="fs-5">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit.
-						Laboriosam aliquam cum dolore, ratione voluptate cumque
-						totam alias, culpa sint saepe atque aut repellat
-						doloribus. Placeat corporis delectus facilis cupiditate
-						numquam?
-					</p>
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing
-						elit. Eius reprehenderit soluta, perspiciatis et amet
-						aliquam dolore suscipit modi nobis, minus non dicta
-						porro, cupiditate nulla recusandae incidunt. Quisquam,
-						provident laborum.
-					</p>
-					<p class="style">Gustave Berneir</p>
+			<div id="carouselExample" class="carousel slide">
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<div
+							class="col-12 col-md-12 row pt-5 justify-content-center m-0"
+						>
+							<div class="col-12 col-md-4 bg_color p-5">
+								<h4>Gustave Berneir</h4>
+								<p class="text-secondary">Executive Chef</p>
+								<p class="fs-5">
+									Lorem ipsum dolor sit amet consectetur
+									adipisicing elit. Laboriosam aliquam cum
+									dolore, ratione voluptate cumque totam
+									alias, culpa sint saepe atque aut repellat
+									doloribus. Placeat corporis delectus facilis
+									cupiditate numquam?
+								</p>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur
+									adipisicing elit. Eius reprehenderit soluta,
+									perspiciatis et amet aliquam dolore suscipit
+									modi nobis, minus non dicta porro,
+									cupiditate nulla recusandae incidunt.
+									Quisquam, provident laborum.
+								</p>
+								<p class="style">Gustave Berneir</p>
+							</div>
+							<div class="col-12 col-md-4 bg_div4"></div>
+						</div>
+						<!--chef div closed-->
+					</div>
+					<div class="carousel-item">
+						<div
+							class="col-12 col-md-12 row pt-5 justify-content-center m-0"
+						>
+							<div class="col-12 col-md-4 bg_color p-5">
+								<h4>Gustave Berneir</h4>
+								<p class="text-secondary">Executive Chef</p>
+								<p class="fs-5">
+									Lorem ipsum dolor sit amet consectetur
+									adipisicing elit. Laboriosam aliquam cum
+									dolore, ratione voluptate cumque totam
+									alias, culpa sint saepe atque aut repellat
+									doloribus. Placeat corporis delectus facilis
+									cupiditate numquam?
+								</p>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur
+									adipisicing elit. Eius reprehenderit soluta,
+									perspiciatis et amet aliquam dolore suscipit
+									modi nobis, minus non dicta porro,
+									cupiditate nulla recusandae incidunt.
+									Quisquam, provident laborum.
+								</p>
+								<p class="style">Gustave Berneir</p>
+							</div>
+							<div class="col-12 col-md-4 bg_div4"></div>
+						</div>
+						<!--chef div closed-->
+					</div>
+					<div class="carousel-item">
+						<div
+							class="col-12 col-md-12 row pt-5 justify-content-center m-0"
+						>
+							<div class="col-12 col-md-4 bg_color p-5">
+								<h4>Gustave Berneir</h4>
+								<p class="text-secondary">Executive Chef</p>
+								<p class="fs-5">
+									Lorem ipsum dolor sit amet consectetur
+									adipisicing elit. Laboriosam aliquam cum
+									dolore, ratione voluptate cumque totam
+									alias, culpa sint saepe atque aut repellat
+									doloribus. Placeat corporis delectus facilis
+									cupiditate numquam?
+								</p>
+								<p>
+									Lorem ipsum dolor sit amet, consectetur
+									adipisicing elit. Eius reprehenderit soluta,
+									perspiciatis et amet aliquam dolore suscipit
+									modi nobis, minus non dicta porro,
+									cupiditate nulla recusandae incidunt.
+									Quisquam, provident laborum.
+								</p>
+								<p class="style">Gustave Berneir</p>
+							</div>
+							<div class="col-12 col-md-4 bg_div4"></div>
+						</div>
+						<!--chef div closed-->
+					</div>
 				</div>
-				<div class="col-12 col-md-4 bg_div4"></div>
+				<button
+					class="carousel-control-prev"
+					type="button"
+					data-bs-target="#carouselExample"
+					data-bs-slide="prev"
+				>
+					<span
+						class="carousel-control-prev-icon"
+						aria-hidden="true"
+					></span>
+					<span class="visually-hidden">Previous</span>
+				</button>
+				<button
+					class="carousel-control-next"
+					type="button"
+					data-bs-target="#carouselExample"
+					data-bs-slide="next"
+				>
+					<span
+						class="carousel-control-next-icon"
+						aria-hidden="true"
+					></span>
+					<span class="visually-hidden">Next</span>
+				</button>
 			</div>
-			<!--chef div closed-->
+
 			<div class="col-12 col-md-12 row mt-5 p-0 m-0">
 				<div class="bg_div6 row p-md-5 p-0 m-0">
 					<div class="col-12 col-md-12 row justify-content-center">
@@ -671,7 +854,7 @@
 							Lorem ipsum dolor sit amet consectetur adipisicing
 							elit. Porro, ut officia id consequuntur et natus.
 						</p>
-						<form action="" onclick="return validate()">
+						<form action="" onsubmit="return validate()">
 							<div class="mt-3 text-center">
 								<textarea
 									placeholder="* Your Name"
@@ -691,6 +874,7 @@
 									placeholder="*Your Message"
 									class="col-md-12 col-12"
 									rows="5"
+									id="c"
 								></textarea>
 							</div>
 							<div class="text-center mt-4 mt-md-4">
